@@ -90,9 +90,10 @@ public class DFSck extends Configured implements Tool {
       + "snapshottable directories under it\n"
       + "\t-list-corruptfileblocks\tprint out list of missing "
       + "blocks and files they belong to\n"
-      + "\t-blocks\tprint out block report\n"
-      + "\t-locations\tprint out locations for every block\n"
-      + "\t-racks\tprint out network topology for data-node locations\n"
+      + "\t-files -blocks\tprint out block report\n"
+      + "\t-files -blocks -locations\tprint out locations for every block\n"
+      + "\t-files -blocks -racks" 
+      + "\tprint out network topology for data-node locations\n"
       + "\t-storagepolicies\tprint out storage policy summary for the blocks\n"
       + "\t-showprogress\tshow progress in output. Default is OFF (no progress)\n"
       + "\t-blockId\tprint out which file this blockId belongs to, locations"
